Fix contrast for Dashboard

--- a/src/components/Dashboard.module.css
+++ b/src/components/Dashboard.module.css
@@ -2,6 +2,5 @@
     display: grid;
     grid-template-rows: 2fr 3fr;
     padding: 10px 15px;
-    background-color: rgb(57, 7, 77);
-    opacity: 0.5;
+    background-color: rgba(46, 38, 49, 0.5);
 }
